# server

./: Dockerfile  app.py  githubApi.py  pyproject.toml  requirements.txt  sample.env
api/: __init__.py  github.py
cronjob/: __init__.py  cronjob.py
events/: __init__.py  newRegistrationEvent.py  pullRequestEventHandler.py  ticketEventHandler.py  ticketFeedbackHandler.py
githubdatapipeline/issues/: destination.py  processor.py
githubdatapipeline/pull_request/: ingestor.py  processor.py  scraper.py
githubdatapipeline/pull_request/models/: pull_request.py
handlers/: EventHandler.py  installation_handler.py  issue_comment_handler.py  issues_handler.py  label_handler.py  pull_request_handler.py
models/: __init__.py  models.py  product.py
supabasedatapipeline/: __init__.py
supabasedatapipeline/github_profile_render/: ingestor.py
utils/: __init__.py  connect_db.py  db.py  dispatcher.py  github_adapter.py  github_api.py  helpers.py  jwt_generator.py  link_pr_issue.py  logging_file.py  markdown_handler.py  migrate_tickets.py  migrate_users.py  new_jwt_generator.py  runtime_vars.py  user_activity.py  webhook_auth.py
