[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.2",
    "dateutils>=0.6.12",
    "flatdict>=4.0.1",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "mistune>=3.2.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "segno>=1.6.6",
    "sqlalchemy>=2.0.45",
    "supabase>=2.27.0",
    "werkzeug>=3.1.4",
]
